--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
